--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -15,6 +15,7 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
+  box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 	border: 0;
