--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -20,10 +20,11 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-  font-family: Quicksand, Microsoft YaHei, sans-serif;
   font-weight:normal;
 	vertical-align: baseline;
   user-select: none;
+  word-break: break-word;
+  font-family: Quicksand, Microsoft YaHei, sans-serif;
 }
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
@@ -48,7 +49,7 @@ body {
 }
 *::-webkit-scrollbar-thumb {
   height: 40px;
-  background-color: #ccc;
+  background-color: #aaa;
   border-radius: 16px;
 }
 ol, ul {
